--- a/ES-S2-G5/Views/Home/Dettagli.cshtml
+++ b/ES-S2-G5/Views/Home/Dettagli.cshtml
@@ -34,10 +34,9 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
-        <button type="submit" class="btn btn-danger" asp-action="Detele">Delete</button>
+        <button class="btn btn-danger" asp-action="Detele">Delete</button>
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
     <a asp-action="Index">Back to List</a>
 </div>
