--- a/ES-S2-G5/Views/Home/Index.cshtml
+++ b/ES-S2-G5/Views/Home/Index.cshtml
@@ -1,12 +1,50 @@
-﻿@model List<ES_S2_G5.Entity.Article>
+﻿@model IEnumerable<ES_S2_G5.Entity.Article>
 
 @{
-    ViewData["Title"] = "Home";
+    ViewData["Title"] = "Index";
 }
 
-<h1>Home</h1>
+<h1>Articoli</h1>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<p>
+    <a asp-action="FormArticle">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Price)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Description)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+           
+            <td>
+            <form asp-controller="Home" asp-action="Delete">
+                <input type="hidden" name="id" value="@item.Id" />
+                <button class="btn btn-danger mt-2" type="submit">Cancella</button>
+            </form>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
