--- a/ES-S2-G5/Views/Home/Index.cshtml
+++ b/ES-S2-G5/Views/Home/Index.cshtml
@@ -43,6 +43,10 @@
                 <input type="hidden" name="id" value="@item.Id" />
                 <button class="btn btn-danger mt-2" type="submit">Cancella</button>
             </form>
+                    <form asp-controller="Home" asp-action="Dettagli">
+                        <input type="hidden" name="id" value="@item.Id" />
+                        <button class="btn btn-danger mt-2" type="submit">Dettagli</button>
+                    </form>
                 </td>
             </tr>
         }
