--- a/ES-S2-G5/Views/Home/Dettagli.cshtml
+++ b/ES-S2-G5/Views/Home/Dettagli.cshtml
@@ -4,39 +4,52 @@
     ViewData["Title"] = "Dettagli";
 }
 
-<h1>Dettagli</h1>
+<h1 class="fst-italic text-white">Dettagli</h1>
 
 <div>
-    <h4>Article</h4>
+    <h4 class="fst-italic text-white">Article</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2 text-white">
             @Html.DisplayNameFor(model => model.Id)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 text-white border border-light">
             @Html.DisplayFor(model => model.Id)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2 text-white">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 text-white border bordere-light">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2 text-white">
             @Html.DisplayNameFor(model => model.Price)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 text-white border bordere-light">
             @Html.DisplayFor(model => model.Price)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2 text-white">
             @Html.DisplayNameFor(model => model.Description)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 text-white border bordere-light">
             @Html.DisplayFor(model => model.Description)
         </dd>
-        <button class="btn btn-danger" asp-action="Detele">Delete</button>
+        <dt class="col-sm-2 text-white">
+            Copertina
+        </dt>
+        @if (Model.CoverImg == null)
+        {
+            <img src="~/images/Jordan 4.jpg" alt="Immagine Copertina" style="max-width: 300px; max-height: 300px;" />
+        }
+        else
+        {
+            <dd class="col-sm-10">
+                <img src="@Url.Content($"~/images/{Model.Id}.jpg")" alt="Immagine Copertina" style="max-width: 300px; max-height: 300px;" />
+            </dd>
+        }
+    </dl>
     </dl>
 </div>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-outline-light">Back to List</a>
 </div>
