--- a/ES-S2-G5/Views/Home/FormArticle.cshtml
+++ b/ES-S2-G5/Views/Home/FormArticle.cshtml
@@ -4,38 +4,43 @@
     ViewData["Title"] = "FormArticle";
 }
 
-<h1 class="fst-italic">Crea L'articolo</h1>
+<h1 class="fst-italic text-white">Crea L'articolo</h1>
 
-<h4 class="text-center fst-italic">Article</h4>
+<h4 class="text-center fst-italic text-white">Article</h4>
 <hr />
 <div class="row justify-content-center">
     <div class="col-md-4">
-        <form asp-action="FormArticle">
+        <form asp-action="FormArticle" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group mb-2">
-                <label asp-for="Name" class="control-label">Inserisci il nome</label>
+                <label asp-for="Name" class="control-label text-white">Inserisci il nome</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group mb-2">
-                <label asp-for="Price" class="control-label">Inserisci il prezzo</label>
+                <label asp-for="Price" class="control-label text-white">Inserisci il prezzo</label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group mb-2">
-                <label asp-for="Description" class="control-label">Inserisci una descrizione del prodotto</label>
+                <label asp-for="Description" class="control-label text-white">Inserisci una descrizione del prodotto</label>
                 <input type="textarea" asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group mb-2">
-                <input type="submit" class="btn btn-primary mt-2" asp-action="Write" />
+                <label asp-for="CoverImg" class="control-label text-white">Carica l'immagine di copertina</label>
+                <input asp-for="CoverImg" type="file" class="form-control" />
+                <span asp-validation-for="CoverImg" class="text-danger"></span>
+            </div>
+            <div class="form-group mb-2">
+                <input type="submit" value="Create" class="btn btn-outline-light mt-2" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-outline-light">Back to List</a>
 </div>
 
 @section Scripts {
